debug功能